--- a/ms-participantes-deployment.yml
+++ b/ms-participantes-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: ms-participantes-container
-          image: anthonyponte/ms-participantes:v1
+          image: anthonyponte/ms-participantes:1.0.0
           args:
             - "--spring.config.additional-location=file:/config/"
           ports:
