--- a/ms-participantes-service.yml
+++ b/ms-participantes-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ms-participantes-service
+  name: ms-participantes
 spec:
   selector:
     app: ms-participantes
