--- a/ms-participantes-deployment.yml
+++ b/ms-participantes-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: ms-participantes-container
-          image: anthonyponte/ms-participantes:1.0.0
+          image: ms-participantes:1.0.1
           args:
             - "--spring.config.additional-location=file:/config/"
           ports:
@@ -61,7 +61,7 @@ spec:
               memory: "600Mi"
           volumeMounts:
             - name: ms-participantes-volume
-              mountPath: /config/
+              mountPath: /config/application.yml
               subPath: application.yml
       volumes:
         - name: ms-participantes-volume
