--- a/ms-participantes-deployment.yml
+++ b/ms-participantes-deployment.yml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ms-participantes-deployment
+  labels:
+    app: ms-participantes
 spec:
   replicas: 1
   selector:
@@ -13,8 +15,8 @@ spec:
         app: ms-participantes
     spec:
       containers:
-        - name: ms-participantes-container
-          image: ms-participantes:1.0.1
+        - name: ms-participantes
+          image: anthonyponte/ms-participantes:1.0.1
           args:
             - "--spring.config.additional-location=file:/config/"
           ports:
