--- a/ms-participantes-service.yml
+++ b/ms-participantes-service.yml
@@ -2,7 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ms-participantes
+  labels:
+    app: ms-participantes
 spec:
+  type: NodePort
   selector:
     app: ms-participantes
   ports:
@@ -10,4 +13,3 @@ spec:
     port: 9091
     targetPort: 9091
     nodePort: 30091
-  type: NodePort
